syntax = "proto3";

package sekai.db;

import "sekai/db/proto/descriptor.proto";

message EpisodeCharacter {
  option (master_db_file) = "episodeCharacters.json";
  enum StoryType {
    UNKNOWN_STORY_TYPE = 0;
    CARD_STORY         = 1 [(json_value) = "card_story"];
    EVENT_STORY        = 2 [(json_value) = "event_story"];
    UNIT_STORY         = 3 [(json_value) = "unit_story"];
  }

  optional int32 id             = 1 [(json_name) = "id"];
  optional int32 seq            = 2 [(json_name) = "seq"];
  optional int32 character2d_id = 3 [(json_name) = "character2dId"];
  optional StoryType story_type = 4 [(json_name) = "storyType"];
  optional int32 episode_id     = 5 [(json_name) = "episodeId"];
}
